refactor: payment record jpa 전환